@@ -2,16 +2,13 @@ package zjg.marketplace.presentation.adapter.path;
 
 import org.springframework.http.MediaType;
 import zjg.marketplace.core.valueObjects.path.ImagePath;
-import zjg.marketplace.core.valueObjects.extension.ImageExtension;
 
 public class PathMediaTypeAdapter extends ImagePath {
-    public PathMediaTypeAdapter(String path) {
-        this.setPath(path);
+    public PathMediaTypeAdapter(String completePath) {
+        super(completePath);
     }
+
     public MediaType getMediaType() {
-        var extension = new ImageExtension(getPath());
-        var fixedExt = extension.getExtension().replace(".", "");
-        var formated = String.format("image/%s", fixedExt);
-        return MediaType.valueOf(formated);
+        return MediaType.valueOf("image/%s".formatted(getExtension()));
     }
 }
